--- a/frontend/blogs/src/index.css
+++ b/frontend/blogs/src/index.css
@@ -32,7 +32,7 @@ body,html{
     text-align: center;
     margin-top: 50px;
     border-radius: 50px;
-    background-color: brown;
+    background-color: #bbb;
    
 
 
@@ -41,7 +41,7 @@ body,html{
     margin: auto;
     width: 40%;
     align-items: center;
-    background-color: brown;
+    background-color:#bbb;
     border-radius: 50px;
     
 }
@@ -83,10 +83,8 @@ body,html{
     margin:10px; 
     border-radius: 5px;
     box-shadow:0 2px 2px 2px rgba(0, 0, 0, 0.5);
-    width:400px;
-    height:300px;
     float: left;
-    background-color:brown;
+    background-color:#bbb;
 }
 .Footer{
   position: absolute;
@@ -94,8 +92,16 @@ body,html{
 }
 .DeletIcon{
     float:right;
-    margin-top: 150px;
+   
     margin-right: 10px;
     cursor: pointer;
 }
-  
+.createBlog{
+    background-color:#bbb;
+    border-radius: 15px;
+    box-shadow:0 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+/* .createBlog-1{
+    margin-left: 100px;
+   
+} */
